test/bad/BadBindSyntax.sysml
package P {
    part def Q {
        port a;
        port b;
        // missing =
        bind a b;
    }
}
